# zerofilesystem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  check_quality.py  pyproject.toml  release-please-config.json  run.sh  setup.bat  setup.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
docs/: ANTI_PATTERNS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  FUNCTIONAL_ANALYSIS.md  README.md  USER_GUIDE.md
examples/: 01_basic_io.py  02_json_operations.py  03_file_discovery.py  04_file_locking.py  05_transactions.py  06_archives.py  07_directory_ops.py  08_complete_example.py  09_finder.py  10_watcher.py  README.md
src/zerofilesystem/: __init__.py  _core.py  _platform.py  zerofilesystem.py
src/zerofilesystem/classes/: __init__.py  _internal.py  archive_handler.py  change_detector.py  directory_ops.py  exceptions.py  file_lock.py  file_permissions.py  file_transaction.py  files.py  finder.py  integrity_checker.py  io.py  manifest_cache.py  path_utils.py  secure_ops.py  watcher.py
tests/: conftest.py  test_archive_handler.py  test_change_detector.py  test_coverage_gaps.py  test_directory_ops.py  test_examples.py  test_exceptions.py  test_facade.py  test_file_cleaner.py  test_file_finder.py  test_file_hash.py  test_file_io.py  test_file_lock.py  test_file_meta.py  test_file_permissions.py  test_file_sync.py  test_file_transaction.py  test_file_utils.py  test_finder.py  test_gzip.py  test_integrity_checker.py  test_internal.py  test_json_handler.py  test_manifest_cache.py  test_path_utils.py  test_platform.py  test_secure_ops.py  test_watcher.py
